# pallet-mandate

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: lib.rs
