[package]
name = "pallet-mandate"
version = "2.0.2"
authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ETeissonniere/pallet-mandate"
description = "A Substrate pallet to help over modules dispatch root calls"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'frame-system/std',
]

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.7'

[dev-dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.7'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.7'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.7'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.7'

[dependencies.frame-system]
default-features = false
version = '2.0.0-alpha.7'
