[package]
name = "pallet-mandate"
version = "2.0.8"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ETeissonniere/pallet-mandate"
description = "A Substrate pallet to help over modules dispatch root calls"

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std",
  "serde",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.125", optional = true, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }
